--- a/web/about.html
+++ b/web/about.html
@@ -100,8 +100,11 @@
 			</div>
 		</div>
 	</section>
-
-	<header class="self-stretch bg-general-white er-back-tr coltr flex flex-row items-center justify-center py-[15px] box-border top-[0] z-[11111] sticky max-w-full gap-5 text-right text-base text-general-8-secondary font-subtitles-16  lg:box-border  mq450:box-border mq850:box-border">
+<div class="header-placeholder hidden h-[90px] mq950:block "></div>
+	<header class="self-stretch bg-general-white er-back-tr coltr flex flex-row
+	items-center justify-center py-[15px] box-border top-[0] z-[11111]
+	sticky max-w-full gap-5 text-right mq950:fixed text-base text-general-8-secondary
+	 font-subtitles-16  lg:box-border  mq450:box-border mq850:box-border">
 		<div class="w-[1170px] flex flex-row items-end justify-between max-w-full ">
 			<div class="flex flex-row items-center justify-center py-0 px-[3px]">
 				<a href="https://vision-prime.test/" class="starter-logo">
