--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
 <div
-		class="w-full relative bg-general-white overflow-hidden flex flex-col items-start justify-start pt-0 px-0 pb-[249px] box-border gap-[17.5px] leading-[normal] tracking-[normal] text-right text-sm text-general-1-secondary-variant font-body-b3-merriweather-14"
+		class="w-full mq950:pl-[20px] mq950:pr-[10px]   relative bg-general-white overflow-hidden flex flex-col items-start justify-start pt-0 px-0 pb-[249px] box-border gap-[17.5px] leading-[normal] tracking-[normal] text-right text-sm text-general-1-secondary-variant font-body-b3-merriweather-14"
 >
 	<img
 			class="w-full h-full absolute !m-[0] top-[0px] right-[0px] bottom-[0px] left-[0px] max-w-full overflow-hidden max-h-full object-cover"
