--- a/web/about.html
+++ b/web/about.html
@@ -29,7 +29,7 @@
 					class="w-[1200px] flex flex-col items-center justify-start gap-numbers-40 max-w-full mq800:gap-numbers-40"
 			>
 				<button
-						class="cursor-pointer border-border-base-alpha border-[1px] border-solid py-0.5 px-[5px] bg-background-badge-blue w-[166px] h-7 rounded-measurements-radius-full box-border flex flex-row items-center justify-center gap-numbers-4"
+						class="cursor-pointer border-border-base-alpha border-[1px] border-solid py-0.5 px-[5px] bg-background-badge-blue  h-7 rounded-measurements-radius-full box-border flex flex-row items-center justify-center gap-numbers-4"
 				>
 					<div
 							class="rounded-measurements-radius-full bg-background-surface-default hidden flex-row items-center justify-center py-0 px-numbers-8"
@@ -1288,7 +1288,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -1360,7 +1360,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar1@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar1@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -1432,7 +1432,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar2@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar2@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -1499,7 +1499,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar3@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar3@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -1571,7 +1571,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar4@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar4@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -1710,7 +1710,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar5@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar5@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -2659,7 +2659,7 @@
 						class="flex flex-col items-center justify-start gap-measurements-gap-40 max-w-full mq800:gap-measurements-gap-40"
 				>
 					<button
-							class="cursor-pointer border-border-base-alpha border-[1px] border-solid py-0.5 px-[5px] bg-background-badge-blue w-[165px] h-7 rounded-measurements-radius-full box-border flex flex-row items-center justify-center"
+							class="cursor-pointer border-border-base-alpha border-[1px] border-solid py-0.5 px-[5px] bg-background-badge-blue  h-7 rounded-measurements-radius-full box-border flex flex-row items-center justify-center"
 					>
 						<img
 								class="h-4 w-4 relative overflow-hidden shrink-0 hidden"
@@ -3361,7 +3361,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -3433,7 +3433,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar1@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar1@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -3505,7 +3505,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar2@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar2@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -3572,7 +3572,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar3@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar3@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -3644,7 +3644,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar4@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar4@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -3783,7 +3783,7 @@
 										</div>
 									</div>
 									<div
-											class="relative rounded-measurements-radius-full bg-[url('/public/avatar5@3x.png')] bg-cover bg-no-repeat bg-[top]"
+											class="relative rounded-measurements-radius-full bg-[url('./public/avatar5@3x.png')] bg-cover bg-no-repeat bg-[top]"
 									>
 										<div
 												class="absolute h-2/5 w-2/5 top-[67.5%] right-[-7.5%] bottom-[-7.5%] left-[67.5%] rounded-measurements-radius-full bg-background-accent-green-accent border-background-surface-default border-[1.5px] border-solid box-border hidden"
@@ -4603,7 +4603,7 @@
 					class="w-[1200px] flex flex-row items-start justify-center flex-wrap content-start gap-x-[20.7px] gap-y-6 max-w-full"
 			>
 				<div
-						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('/public/container@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
+						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('./public/container@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
 				>
 					<h2
 							class="m-0 w-[203px] relative text-inherit tracking-[-0.3px] leading-[30px] font-medium font-inherit inline-block mq450:text-lgi mq450:leading-[24px]"
@@ -4641,7 +4641,7 @@
 					</div>
 				</div>
 				<div
-						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('/public/container1@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
+						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('./public/container1@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
 				>
 					<h2
 							class="m-0 w-[203px] relative text-inherit tracking-[-0.3px] leading-[30px] font-medium font-inherit inline-block mq450:text-lgi mq450:leading-[24px]"
@@ -4676,7 +4676,7 @@
 					</div>
 				</div>
 				<div
-						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('/public/container2@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
+						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('./public/container2@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
 				>
 					<h2
 							class="m-0 w-[203px] relative text-inherit tracking-[-0.3px] leading-[30px] font-medium font-inherit inline-block mq450:text-lgi mq450:leading-[24px]"
@@ -4711,7 +4711,7 @@
 					</div>
 				</div>
 				<div
-						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('/public/container3@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
+						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('./public/container3@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
 				>
 					<h2
 							class="m-0 w-[203px] relative text-inherit tracking-[-0.3px] leading-[30px] font-medium font-inherit inline-block mq450:text-lgi mq450:leading-[24px]"
@@ -4750,7 +4750,7 @@
 					class="w-[1200px] flex flex-row items-start justify-center flex-wrap content-start gap-x-[20.7px] gap-y-6 max-w-full"
 			>
 				<div
-						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('/public/container4@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
+						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('./public/container4@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
 				>
 					<h2
 							class="m-0 w-[203px] relative text-inherit tracking-[-0.3px] leading-[30px] font-medium font-inherit inline-block mq450:text-lgi mq450:leading-[24px]"
@@ -4785,7 +4785,7 @@
 					</div>
 				</div>
 				<div
-						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('/public/container5@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
+						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('./public/container5@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
 				>
 					<h2
 							class="m-0 w-[203px] relative text-inherit tracking-[-0.3px] leading-[30px] font-medium font-inherit inline-block mq450:text-lgi mq450:leading-[24px]"
@@ -4820,7 +4820,7 @@
 					</div>
 				</div>
 				<div
-						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('/public/container6@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
+						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('./public/container6@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
 				>
 					<h2
 							class="m-0 w-[203px] relative text-inherit tracking-[-0.3px] leading-[30px] font-medium font-inherit inline-block mq450:text-lgi mq450:leading-[24px]"
@@ -4855,7 +4855,7 @@
 					</div>
 				</div>
 				<div
-						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('/public/container7@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
+						class="h-[360px] flex-1 rounded-measurements-radius-xxxl flex flex-col items-start justify-end py-10 pl-measurements-gap-40 pr-5 box-border gap-numbers-16 bg-[url('./public/container7@3x.png')] bg-cover bg-no-repeat bg-[top] min-w-[282px]"
 				>
 					<h2
 							class="m-0 w-[203px] relative text-inherit tracking-[-0.3px] leading-[30px] font-medium font-inherit inline-block mq450:text-lgi mq450:leading-[24px]"
@@ -7042,7 +7042,7 @@
 		</div>
 	</div>
 	<section
-			class="self-stretch flex flex-col items-center justify-start bg-[url('/public/feedback-form@3x.png')] bg-cover bg-no-repeat bg-[top] max-w-full text-left text-base text-background-surface-default font-body-s-bold"
+			class="self-stretch flex flex-col items-center justify-start bg-[url('./public/feedback-form@3x.png')] bg-cover bg-no-repeat bg-[top] max-w-full text-left text-base text-background-surface-default font-body-s-bold"
 	>
 		<div
 				class="self-stretch flex flex-col items-center justify-center py-measurements-gap-80-48 px-5 box-border max-w-full mq800:gap-numbers-64 mq800:pt-measurements-gap-80-48 mq800:pb-measurements-gap-80-48 mq800:box-border mq450:gap-numbers-64"
