--- a/web/businesss-set-up-dubai-conta.html
+++ b/web/businesss-set-up-dubai-conta.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
     <link rel="stylesheet" href="./global.css" />
+	  <link rel="stylesheet" href="./output.css"/>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
@@ -844,7 +845,10 @@
           </div>
         </div>
       </section>
-      <section
+
+    </div>
+
+        <section
         class="self-stretch flex flex-col items-center justify-start bg-[url('/public/feedback-form@3x.png')] bg-cover bg-no-repeat bg-[top] max-w-full text-left text-base text-background-surface-default font-body-s-bold"
       >
         <div
@@ -1704,6 +1708,5 @@
           </div>
         </div>
       </section>
-    </div>
   </body>
 </html>
